--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
+  google_sign_in: ^6.0.2
+  bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
