--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,14 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
-  google_sign_in: ^5.0.5
+  google_sign_in: ^6.0.2
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   flow_builder: ^0.0.9
+  sign_in_with_apple: ^4.3.0
+  
+
 
 dev_dependencies:
   flutter_test:
